Fixes spacing and overflow

--- a/styles.css
+++ b/styles.css
@@ -12,17 +12,12 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 
-body {
-  overflow-x: hidden;
-}
-
 #venturecoin {
   font-family: 'Comfortaa-Light';
 }
 
-.banner {
-  position: relative;
-  height: 100vh;
+.content-wrapper {
+  overflow-x: hidden;
 }
 
 .banner-main {
@@ -123,7 +118,7 @@ body {
 }
 
 .team {
-  margin: 250px auto 0;
+  margin: 140px auto 0;
 }
 
 .investments {
@@ -132,7 +127,7 @@ body {
 
 @media only screen and (min-width: 700px) {
   .team {
-    margin-top: 60px;
+    margin-top: -60px;
   }
   .investments {
     margin-top: 80px;
